<resources>
    <string name="app_name">Chordy</string>
    <string name="home_tab">Home</string>
    <string name="search_tab">Search</string>
    <string name="account_tab">Account</string>
    <string name="logo_text">Chordy</string>
    <string name="home_loading">Loading feed...</string>
    <string name="search_hint">Search songs, artists, albums</string>
    <string name="search_empty">Search a song to see playable chord versions.</string>
    <string name="search_empty_song">Search songs to play a preview and open the player.</string>
    <string name="search_empty_artist">Search artists to open artist pages.</string>
    <string name="search_empty_album">Search albums to open album pages.</string>
    <string name="search_no_results">No results found.</string>
    <string name="searching_tab">Searching \"%1$s\" in %2$s...</string>
    <string name="search_results_count">%1$d %2$s results</string>
    <string name="account_title">Account</string>
    <string name="library_title">My Library</string>
    <string name="button_edit_credentials">Spotify API Credentials</string>
    <string name="spotify_login">Login with Spotify</string>
    <string name="spotify_logout">Logout</string>
    <string name="spotify_reconnect">Reconnect Spotify</string>
    <string name="spotify_manage_login">Manage Spotify Login</string>
    <string name="spotify_login_title">Spotify Login</string>
    <string name="spotify_login_subtitle">Connect your Spotify account to enable search and chord analysis.</string>
    <string name="spotify_login_required">Login with Spotify in Account to enable search and playback.</string>
    <string name="spotify_login_opening_browser">Opening Spotify login page...</string>
    <string name="spotify_login_finishing">Finishing Spotify login...</string>
    <string name="spotify_login_success">Spotify login successful.</string>
    <string name="spotify_logged_in">Connected to Spotify.</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="label_client_id">Spotify Client ID</string>
    <string name="label_client_secret">Spotify Client Secret</string>
    <string name="credentials_required">Login with Spotify in Account to enable search and playback.</string>
    <string name="credentials_saved">Credentials saved.</string>
    <string name="play">Play</string>
    <string name="add">Add</string>
    <string name="playing_unavailable">Preview unavailable for this song.</string>
    <string name="player_now_playing">Now Playing</string>
    <string name="player_loading_chords">Estimating chords...</string>
    <string name="player_retry">Retry</string>
    <string name="community_made_versions">Community made versions</string>
    <string name="tab_all">All</string>
    <string name="tab_song">Song</string>
    <string name="tab_artist">Artist</string>
    <string name="tab_album">Album</string>
    <string name="tab_user">User</string>
    <string name="feature_limited_preview">Playback uses Spotify preview clips in this build.</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="artist_label">Artist</string>
    <string name="album_label">Album</string>
    <string name="followers_label">%1$,d followers</string>
    <string name="album_meta_format">%1$s | %2$s tracks</string>
    <string name="todo_artist_page">#TODO Artist page for %1$s is ready for full implementation.</string>
    <string name="todo_album_page">#TODO Album page for %1$s is ready for full implementation.</string>
    <string name="audio_api_forbidden">Spotify denied audio analysis/features for these credentials (HTTP 403). Use an app with Web API access to audio endpoints.</string>
    <string name="unknown_key_bpm">-- | -- bpm</string>
    <string name="minutes_ago">%1$d hour ago</string>
    <string name="hours_ago">%1$d hours ago</string>
    <string name="latest_chords">%1$s | %2$.0f bpm</string>
    <string name="latest_chords_no_tempo">%1$s</string>
    <string name="error_generic">Something went wrong. Try again.</string>
</resources>
